html + css update

--- a/style.css
+++ b/style.css
@@ -4,14 +4,58 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 120%;
     background: #222;
+    background-size: cover;
+    background-image: url(https://source.unsplash.com/random/1600x900/?landscape);
 }
 
 .card {
-    background: #eaeaea;
+    background: #000000d0;
+    color: white;
     padding: 2em;
     border-radius: 30px;
     width: 100%;
     max-width: 420px;
     margin: 1em;
+}
+
+.search {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+button {
+    margin: 0.5em;
+    border-radius: 50%;
+    border: none;
+    height: 43.33px;
+    width: 43.33px;
+    outline: none;
+    background: #7c7c7c2b;
+    color: white;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+}
+
+button:hover {
+    background: #7c7c7c6b;
+}
+
+.searchbar {
+    border: none;
+    outline: none;
+    width: calc(100% - 100px);
+    padding: 0.4em 1em;
+    border-radius: 24px;
+    background: #7c7c7c2b;
+    color: white;
+    font-family: inherit;
+    font-size: 105%;
+}
+
+.temp {
+    margin: 0;
 }
